--- a/lab_8/python_Lection7_Animation.ipynb
+++ b/lab_8/python_Lection7_Animation.ipynb
@@ -65,23 +65,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-07T19:21:14.646530500Z",
-     "start_time": "2023-11-07T19:21:14.618309Z"
-    }
+    "is_executing": true
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers (2206216384.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;36m  Cell \u001B[1;32mIn[1], line 1\u001B[1;36m\u001B[0m\n\u001B[1;33m    01    # обязательный  импорт для отображения анимации\u001B[0m\n\u001B[1;37m     ^\u001B[0m\n\u001B[1;31mSyntaxError\u001B[0m\u001B[1;31m:\u001B[0m leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "01    # обязательный  импорт для отображения анимации\n",
     "02    import matplotlib.pyplot as plt\n",
@@ -1041,12 +1029,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-07T19:21:59.853099400Z",
-     "start_time": "2023-11-07T19:21:59.106534500Z"
-    }
-   },
    "outputs": [
     {
      "data": {
@@ -1089,7 +1071,10 @@
     "                               frames=200, interval=20, blit=True)\n",
     " \n",
     " "
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
